enabled the watchdog timer.

--- a/code/Makefile
+++ b/code/Makefile
@@ -1,12 +1,12 @@
 ARCH=msp430x2274
-CFLAGS := -mmcu=$(ARCH) -g -Wall -Os
+CFLAGS := -mmcu=$(ARCH) -g -Wall -O
 CFLAGS += -mendup-at=main
 LDFLAGS :=
 
 CC := msp430-gcc
 
 C_FILES := main.c lcd.c encoder.c adc10.c thermocouple.c triac.c
-H_FILES := lcd.h encoder.h adc10.h thermocouple.h triac.h
+H_FILES := lcd.h encoder.h adc10.h thermocouple.h triac.h watchdog.h
 
 main: $(C_FILES) $(H_FILES)
 	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $(C_FILES) 
