--- a/code/Makefile
+++ b/code/Makefile
@@ -6,8 +6,8 @@ LDFLAGS :=
 
 CC := msp430-gcc
 
-C_FILES := main.c lcd.c encoder.c adc10.c thermocouple.c triac.c
-H_FILES := lcd.h encoder.h adc10.h thermocouple.h triac.h watchdog.h control.h
+C_FILES := main.c lcd.c encoder.c adc10.c thermocouple.c triac.c scheduler.c
+H_FILES := lcd.h encoder.h adc10.h thermocouple.h triac.h watchdog.h control.h scheduler.h
 
 main: $(C_FILES) $(H_FILES)
 	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $(C_FILES) 
